# ha-yainternetometr

./: .gitignore  NOTICE  README.md  hacs.json  hacs.json.j2  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-manifests.yml  hacs-validate.yml
custom_components/yainternetometr/: __init__.py  button.py  config_flow.py  const.py  manifest.json  manifest.json.j2  number.py  sensor.py  strings.json
custom_components/yainternetometr/ translations/en/: strings.json
custom_components/yainternetometr/translations/: en.json  ru.json
custom_components/yainternetometr/translations/en/: strings.json
custom_components/yainternetometr/translations/ru/: strings.json
scripts/: build_hacs.py  build_manifest.py
templates/: manifest.json.j2
